[tool.poetry]
name = "mlack"
version = "0.1.0"
description = "A mock Slack API for Python. Used for testing."
authors = ["intercepted16 <162676516+intercepted16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
httpretty = "^1.1.3"
names = "^0.3.0"
slack-sdk = "^3.31.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

