[project]
name = "mlack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "intercepted16", email = "162676516+intercepted16@users.noreply.github.com" }
]
dependencies = [
    "requests",
    "httpretty",
    "names",
    "slack-sdk",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlack"]
